# src/controllers/auth.controller.ts
@@ -20,6 +20,9 @@ type Tlogin = {
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+   #swagger.tags=['auth']
+   */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as Tregister;
 
@@ -51,8 +54,10 @@ export default {
       });
     }
   },
+
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags=['auth']
      #swagger.requestBody = {
      required: true,
      schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -78,7 +83,15 @@ export default {
           data: null,
         });
       }
-
+      const userByIsActivate = await userModel.findOne({
+        isActive: true,
+      });
+      if (!userByIsActivate) {
+        return res.status(403).json({
+          message: "user is not actived yet!",
+          data: null,
+        });
+      }
       // validasi password
       const validatePassword: boolean =
         encrypt(password) === userByIdentifier.password;
@@ -108,6 +121,7 @@ export default {
   },
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags=['auth']
      #swagger.security = [{
      "bearerAuth": []
      }]
@@ -128,13 +142,64 @@ export default {
       });
     }
   },
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags=['auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/activation"}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await userModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "user succesfully activated",
+        data: user,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
 };
 
 const registerValidateSchema = yup.object({
   fullName: yup.string().required(),
   username: yup.string().required(),
   email: yup.string().email().required(),
-  password: yup.string().required(),
+  password: yup
+    .string()
+    .required()
+    .min(6, "password must be at least 6 character")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: yup
     .string()
     .required()
