# src/docs/swagger_output.json
@@ -18,6 +18,9 @@
   "paths": {
     "/auth/register": {
       "post": {
+        "tags": [
+          "auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -57,6 +60,9 @@
     },
     "/auth/login": {
       "post": {
+        "tags": [
+          "auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -88,6 +94,9 @@
     },
     "/auth/me": {
       "get": {
+        "tags": [
+          "auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -105,6 +114,37 @@
             "bearerAuth": []
           }
         ]
+      }
+    },
+    "/auth/activation": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/activation"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/activation"
+              }
+            }
+          }
+        }
       }
     }
   },
@@ -130,6 +170,18 @@
         },
         "xml": {
           "name": "LoginRequest"
+        }
+      },
+      "activation": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string",
+            "example": "abcde"
+          }
+        },
+        "xml": {
+          "name": "activation"
         }
       }
     }
