# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendMail } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
 export interface User {
   fullName: string;
@@ -10,6 +12,7 @@ export interface User {
   profilPicture: string;
   isActive: boolean;
   activationCode: string;
+  createdAt?: string;
 }
 
 const schema = mongoose.Schema;
@@ -22,10 +25,12 @@ const userSchema = new schema<User>(
     username: {
       type: schema.Types.String,
       required: true,
+      unique: true,
     },
     email: {
       type: schema.Types.String,
       required: true,
+      unique: true,
     },
     password: {
       type: schema.Types.String,
@@ -56,7 +61,32 @@ const userSchema = new schema<User>(
 userSchema.pre("save", function (next) {
   const user = this;
   user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
   next();
+});
+
+userSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+    console.log(`email activation was sent to: ${user.email}`);
+    const contentMail = await renderMailHtml("registration-succes.ejs", {
+      username: user.username,
+      fullName: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+    await sendMail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Aktivasi Akun Anda",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.log(`error: ${error}`);
+  } finally {
+    next();
+  }
 });
 
 userSchema.methods.toJSON = function () {
